--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,4 +1,5 @@
 <%- include('./partials/header')%>
+<!-- trial -->
     <!-- <% for (var x of singleFoodPost.images){ %>
         <img src="<%= x.url %>" class="img-thumbnail" alt="">
     <%} %> -->
