--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,11 @@
 <%- include('./partials/header')%>
-    <h1>This is the home page where all the food post is displayed</h1>
 
+    <div class = "container">
+        <div id = "map" style = "width:100% ; height:500px"></div>
+    </div>
     
 
-
-   
-
-
+    <h1>This is the home page where all the food post is displayed</h1>
 
 
 
@@ -44,7 +43,7 @@
                 <a href = "/foodposts/<%= arrOfFoodPost[i]._id %>"><%= arrOfFoodPost[i].name %></a>
                 <p>By <%= arrOfFoodPost[i].writer.username %></p>
                 <p>At <%= arrOfFoodPost[i].location %></p>
-                <p hidden = true><%= arrOfFoodPost[i].locationInCoordinates %></p>
+                <p hidden = true><%= arrOfFoodPost[i].geometry.coordinates %></p>
             </div>
             
 
@@ -52,9 +51,12 @@
 
     </div>
     
-    
+    <script>
+        const foodPosts = { features : <%- JSON.stringify(arrOfFoodPost) %>}
+    </script>
 
     <script src="/jsfiles/homeMapbox.js"></script>
+    <script src="/jsfiles/homeClusterMap.js"></script>
         
      
 
