--- a/views/show.ejs
+++ b/views/show.ejs
@@ -78,7 +78,7 @@
     <% }%>
 
     <% if(currentUser){ %>
-    <form action="/foodposts/<%= singleFoodPost._id %>/reviews" method = "POST">
+    <form action="/foodposts/<%= singleFoodPost._id %>/reviews" class="validated-form" novalidate method = "POST">
         <div class="form-row">
             <div class="col-md-4 mb-3">
                 <label for="description">Description</label>
@@ -94,30 +94,12 @@
     <% } %>
 
     
-
-
-    
-
-
-    <footer class="footer bg-dark py-3 mt-auto">
-        <div class="container">
-            <span class="text-muted">&copy; Eatstagram 2023</span>
-        </div>
-    </footer>
-
     <script>
-        const MapBoxToken = "<%- process.env.MY_MAPBOX_API_TOKEN %>"
+        const MapBoxToken = "<%- process.env.MAPBOX_API_TOKEN %>"
         const destination = [<%= singleFoodPost.geometry.coordinates[0] %>,<%= singleFoodPost.geometry.coordinates[1] %>]
     </script>
     <script src="/jsfiles/showMapbox.js"></script>
-    
-    
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
-    integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
-    crossorigin="anonymous"></script>
-</body>
-</html>
+
+
+<%- include('./partials/footer')%>
