--- a/views/home.ejs
+++ b/views/home.ejs
@@ -56,8 +56,8 @@
         const MapBoxToken = "<%- process.env.MAPBOX_API_TOKEN %>"
     </script>
 
-    <script src="/jsfiles/homeMapbox.js"></script>
-    <script src="/jsfiles/homeClusterMap.js"></script>
+    // <script src="/jsfiles/homeMapbox.js"></script>
+    // <script src="/jsfiles/homeClusterMap.js"></script>
         
      
 
