--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,8 +1,12 @@
 <%- include('./partials/header')%>
-<!-- trial -->
-    <!-- <% for (var x of singleFoodPost.images){ %>
-        <img src="<%= x.url %>" class="img-thumbnail" alt="">
-    <%} %> -->
+
+
+    <style>
+    
+        #map { top: 0; bottom: 0; height: 700px;width:700px;margin-left: 20px;margin-top: 50px;border-style:outset;}
+    </style>
+
+
     <style>
         #foodpostCarousel{
             margin-left: auto;
