--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,9 @@
 <%- include('./partials/header')%>
 
-
+    <style>
+        
+        #map { top: 0; bottom: 0; height: 700px;width:700px;margin-left: 20px;margin-top: 50px;border-style:outset;}
+    </style>
     <div class = "container">
         <div id = "map" style = "width:100% ; height:500px"></div>
     </div>
