--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,7 @@
 <%- include('./partials/header')%>
-
+<body class = "d-flex flex-column vh-100">
+    <%- include('./partials/flasher')%>
+    <%- include('./partials/navbar')%>
     <style>
         
         #map { top: 0; bottom: 0; height: 700px;width:700px;margin-left: 20px;margin-top: 50px;border-style:outset;}
@@ -68,5 +70,3 @@
     
 
 <%- include('./partials/footer')%>
-
-
