--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,5 +1,7 @@
 <%- include('./partials/header')%>
-
+<body>
+    <%- include('./partials/flasher')%>
+    <%- include('./partials/navbar')%>
 
     <style>
         #map { top: 0; bottom: 0; height: 800px;width:700px;margin-left: 20px;margin-top: 50px;border-style:outset;}
