--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,22 +1,41 @@
 <%- include('./partials/header')%>
+<body class = "d-flex flex-column vh-100">
+    <%- include('./partials/flasher')%>
+    <%- include('./partials/navbar')%>
+    <link rel="stylesheet" href="/cssfiles/login.css">
 
-<h1>Login</h1>
-<form action="/profile/login" method="POST" class="validated-form" novalidate>
-    <div class="mb-3">
-        <label class="form-label" for="username">Username</label>
-        <input class="form-control" type="text" id="username" name="username" required>
-        <div class="valid-feedback">
-            Looks good!
-        </div>
-    </div>
+    <div class="box1">
+        <div class="container1">
+            <form action="/profile/login" method="POST" class="validated-form">                
+                <div class="top">
+                    <header><strong>Login</strong></header>
+                </div>
+        
+                <div class="input-field">
+                    <input type="text" class="input" placeholder="Username" name = "username" required>
+                    <i class='bx bx-user bx-burst' ></i>
+                </div>
 
-    <div class="mb-3">
-        <label class="form-label" for="password">Password</label>
-        <input class="form-control" type="password" id="password" name="password" required>
-        <div class="valid-feedback">
-            Looks good!
+                <div class="input-field">
+                    <input type="Password" class="input" placeholder="Password" name="password" required>
+                    <i class='bx bx-lock-alt bx-burst'></i>
+                </div>
+
+                <div class="input-field">
+                    <input type="submit" class="submit" value="Login" id="firstButton">
+                </div>
+            </form>
+            <form action="/profile/register" method = "GET">
+                <div class="input-field">
+                    <input type="submit" class="submit" value="Register" id="secondButton">
+                </div>
+            </form>
         </div>
-    </div>
-    <button class="btn btn-success">Login</button>
-</form>
-<%- include('./partials/footer')%>
+    </div>  
+
+    <%- include('./partials/bsValidation')%>
+
+</body>
+</html>
+    
+
