--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,45 +13,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/cssfiles/header.css">
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.1/mapbox-gl-directions.js"></script>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.1/mapbox-gl-directions.css" type="text/css">
- 
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
-<body class = "vh-100">
-    
-    
 
-    
-    <% if(error && error.length) {%>
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            <%= error %>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-    <% } %>
-
-
-    <div class = "myNavbar">
-        <nav>
-            <h2><a href="/" class = "logo">EATSTAGRAM</a></h2>
-            <ul>
-                <li><a href="/foodposts">All Foodposts</a></li>
-                <li><a href="/foodposts/new">New Foodpost</a></li>
-                <% if(!currentUser) {%>
-                    <li><a href="/profile/register">Register</a></li>
-                <% } else {%>
-                    <li><a href="/profile/<%= currentUser._id %>">Profile</a></li>
-                <% } %>
-            </ul>
-            <% if(!currentUser){ %>
-                <a href = "/profile/login" class="btn btn-info mybutton" >Login</a>
-            <%} else {%>
-                <a href = "/profile/logout" class="btn btn-info mybutton" >Logout</a>
-            <% } %>
-        </nav>
-    </div>
 
        
    
