--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,7 @@
     <%- include('./partials/flasher')%>
     <%- include('./partials/navbar')%>
     <link rel="stylesheet" href="/cssfiles/login.css">
+    <link rel="stylesheet" href="/cssfiles/form.css">
 
     <div class="box1">
         <div class="container1">
