--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,8 +3,9 @@
     <%- include('./partials/flasher')%>
     <%- include('./partials/navbar')%>
     <link rel="stylesheet" href="/cssfiles/login.css">
+    <link rel="stylesheet" href="/cssfiles/form.css">
 
-    <div class="box2">
+    <div class="box1">
         <div class="container1">
             <form action="/profile/register" method="POST" class="validated-form">
                 <div class="top">
