--- a/views/show.ejs
+++ b/views/show.ejs
@@ -51,6 +51,8 @@
     <div id="map"></div>
     <h1>My name is <%= singleFoodPost.name %></h1>
     <h1>By <a href="/profile/<%= singleFoodPost.writer._id %>"><%= singleFoodPost.writer.username %></a></h1>
+    <h2>Location: <%= singleFoodPost.location %></h2>
+    <h2>Description: <%= singleFoodPost.description %></h2>
 
 
     <% if (singleFoodPost.writer){ %>
