--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -28,6 +28,13 @@
                   Looks good!
                 </div>
             </div>
+            <div class="col-md-4 mb-3">
+              <label for="description">Description</label>
+              <input type="text" class="form-control" id="description" name = "foodpost[description]" placeholder="Description" value = "<%= singleFoodPost.description%>"required>
+              <div class="valid-feedback">
+                Looks good!
+              </div>
+          </div>
             <input type="file" name="image" id="" multiple>
             <label for="rating">Choose a Rating:</label>
             <select id="rating" name="foodpost[rating]">
