--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,118 +2,140 @@
 <body>
   <%- include('./partials/flasher')%>
   <%- include('./partials/navbar')%>
-  <div class = "container">
-    <form action="/foodposts/<%= singleFoodPost._id %>?_method=PUT" method = "POST" class="validated-form" novalidate enctype="multipart/form-data">
-        <div class="form-row">
-          <div class="col-md-4 mb-3">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" name = "foodpost[name]" placeholder="First name" value = "<%= singleFoodPost.name%>" required>
-            <div class="valid-feedback">
-              Looks good!
+
+  <link rel="stylesheet" href="/cssfiles/edit.css">
+
+
+  <div class="box2">
+    <div class="container">
+      <form action="/foodposts/<%= singleFoodPost._id %>?_method=PUT" method = "POST" class="validated-form" enctype="multipart/form-data">
+        <div class = "row">
+          <div class = "col-6">
+            <div class="top">
+                <header><strong>Update Post</strong></header>
             </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <label for="price">Price</label>
-            <input type="text" class="form-control" id="price" name = "foodpost[price]" placeholder="Price" value = "<%= singleFoodPost.price%>" required>
-            <div class="valid-feedback">
-              Looks good!
+    
+            <div class="input-field">
+                <input type="text" class="input2" name = "foodpost[name]" placeholder="Name" value = "<%= singleFoodPost.name%>" required>
+                <i class='bx bx-user' ></i>
             </div>
-          </div>
-          
-        <div class="form-row">
-            <div class="col-md-4 mb-3">
-                <label for="location">Location</label>
-                <input type="text" class="form-control" id="location" name = "foodpost[location]" placeholder="Location" value = "<%= singleFoodPost.location%>"required>
-                <div class="valid-feedback">
-                  Looks good!
+
+            <div class="input-field">
+              <input type="text" class="input2" name = "foodpost[price]" placeholder="Price" value = "<%= singleFoodPost.price%>" required>
+              <i class='bx bx-dollar' ></i>
+            </div>
+
+            <div class="input-field">
+              <input type="text" class="input2" name = "foodpost[location]" placeholder="Location" value = "<%= singleFoodPost.location%>" required>
+              <i class='bx bx-pin ' ></i>
+            </div>
+
+            <div class="input-field">
+              <textarea class = "input3" cols="50" rows="10" name = "foodpost[description]"  placeholder="Description" required><%= singleFoodPost.description%></textarea>
+              <i class='bx bx-text' id = "descriptionItag"></i>
+            </div>
+
+            <br>
+            <div class = "container1">
+              <div class = "row">
+                
+                <div class = "col-6 pl-0">
+                  <select id="rating" name="foodpost[rating]" class = "mt-3 pt-1 pb-1 pl-1 pr-1" required>
+                    <option selected disabled>Choose A Rating</option>
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                  </select>
+
+                </div>  
+                
+                <div class = "col-4 ml-4">
+                  <input type="file" name="image" id="file" multiple>
+                  <label for="file">
+                    Choose a photo <i class='bx bx-paperclip' ></i>
+                  </label>
+
                 </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <label for="description">Description</label>
-              <input type="text" class="form-control" id="description" name = "foodpost[description]" placeholder="Description" value = "<%= singleFoodPost.description%>"required>
-              <div class="valid-feedback">
-                Looks good!
+                
+                
               </div>
-          </div>
-            <input type="file" name="image" id="" multiple>
-            <label for="rating">Choose a Rating:</label>
-            <select id="rating" name="foodpost[rating]">
-              <% if (rating == 0){%>
-                <option value="0" selected>0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-              <% }else if (rating ==1){%>
-                <option value="0">0</option>
-                <option value="1" selected>1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-              <% }else if (rating ==2){%>
-                <option value="0">0</option>
-                <option value="1">1</option>
-                <option value="2" selected>2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <% }else if (rating ==3){%>
-                  <option value="0">0</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3" selected>3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                <% }else if (rating ==4){%>
-                  <option value="0">0</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4" selected>4</option>
-                  <option value="5">4</option>
-                <% }else if (rating ==5){%>
-                  <option value="0">0</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5" selected>4</option>
-                <% } %>
-            </select>
-        </div>  
-        
-        <style>
-          img{
-            
-            display:block;
-          }
-        </style>
-        <% for (var x = 0;x<singleFoodPost.images.length;x++){ %>
-          <%var y = singleFoodPost.images[x].url .split("upload/")%>
-          <% var redirectLink = y[0] + "upload/w_400/" + y[1] %>
-    
-    
-            <img src="<%= redirectLink %>" alt="">
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" name = "deletedImages[]" value="<%= singleFoodPost.images[x].fileName %>" id="flexCheck-<%= x %>">
-              <label class="form-check-label" for="flexCheck-<%= x %>">
-                Delete?
-              </label>
             </div>
-        <% } %>
-    
-    
-    
-    
-        <button class="btn btn-primary" type="submit">Submit form</button>
-      </form>
-      
-    
+            <br>
+            <div class="input-field">
+              <input type="submit" class="submit" value="Update Post" id="firstButton">
+            </div>
+
+        
+        
+          </div>
+          <div class = "col-6">
+            <div id="foodpostCarousel" class="carousel" data-ride="carousel" data-interval="false">
+              <div class="carousel-inner">
+                  <% for (var x = 0; x < singleFoodPost.images.length ; x++){ %>
+                      <% if(x==0){ %>
+                          <div class="carousel-item active">
+                              <img src="<%= singleFoodPost.images[x].url %>" class="d-block w-100 h-50" alt="...">
+                              <div class = "container2">
+                                <div class="form-check">
+                                  <input class="form-check-input" type="checkbox" name = "deletedImages[]" value="<%= singleFoodPost.images[x].fileName %>" id="flexCheck-<%= x %>">
+                                  <label class="form-check-label" for="flexCheck-<%= x %>">
+                                    Delete?
+                                  </label>
+                                </div>
+                              </div>
+                              
+                          </div>
+                      <% }else{ %>
+                          <div class="carousel-item">
+                              <img src="<%= singleFoodPost.images[x].url %>" class="d-block w-100 h-50" alt="...">
+                              <div class = "container2">
+                                <div class="form-check">
+                                  <input class="form-check-input" type="checkbox" name = "deletedImages[]" value="<%= singleFoodPost.images[x].fileName %>" id="flexCheck-<%= x %>">
+                                  <label class="form-check-label" for="flexCheck-<%= x %>">
+                                    Delete?
+                                  </label>
+                                </div>
+                              </div>
+                              
+                          </div>
+                      <%}%>
+                  <%} %>
+           
+              </div>
+              <% if(singleFoodPost.images.length > 1) {%>
+              <a class="carousel-control-prev" href="#foodpostCarousel" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#foodpostCarousel" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+              </a>
+              <% } %>
+            </div>
+          </div>
         </div>
+        
+      </form>
+      <br>
     </div>
-    
-    
-      
-    <%- include('./partials/footer')%>
+
+</div> 
+
+
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
+    integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
+    crossorigin="anonymous"></script>
+</body>
+</html>
+
+
+
+
+ 
