--- a/views/newfoodpost.ejs
+++ b/views/newfoodpost.ejs
@@ -3,8 +3,7 @@
   <%- include('./partials/flasher')%>
   <%- include('./partials/navbar')%>
   
-  <link rel="stylesheet" href="/cssfiles/newOrEditPost.css">
-  <link rel="stylesheet" href="/cssfiles/form.css">
+  <link rel="stylesheet" href="/cssfiles/newfoodpost.css">
 
   <div class="box2">
       <div class="container1">
@@ -15,17 +14,17 @@
       
               <div class="input-field">
                   <input type="text" class="input2" name = "foodpost[name]" placeholder="Name" required>
-                  <i class='bx bx-user bx-burst' ></i>
+                  <i class='bx bx-user' ></i>
               </div>
 
               <div class="input-field">
                 <input type="text" class="input2" name = "foodpost[price]" placeholder="Price" required>
-                <i class='bx bx-dollar bx-burst' ></i>
+                <i class='bx bx-dollar' ></i>
               </div>
 
               <div class="input-field">
                 <input type="text" class="input2" name = "foodpost[location]" placeholder="Location" required>
-                <i class='bx bx-pin bx-burst' ></i>
+                <i class='bx bx-pin ' ></i>
               </div>
 
 
@@ -33,15 +32,15 @@
             
             <div class="input-field">
               <textarea class = "input3" cols="50" rows="10" name = "foodpost[description]" placeholder="Description"></textarea>
-              <i class='bx bx-text bx-burst' id = "descriptionItag"></i>
+              <i class='bx bx-text' id = "descriptionItag"></i>
             </div>
 
             <br>
             <div class = "container1">
               <div class = "row">
                 
-                <div class = "col-6">
-                  <select id="rating" name="foodpost[rating]">
+                <div class = "col-6 pl-0">
+                  <select id="rating" name="foodpost[rating]" class = "mt-3 pt-1 pb-1 pl-1 pr-1">
                     <option selected disabled>Choose A Rating</option>
                     <option value="0">0</option>
                     <option value="1">1</option>
@@ -66,13 +65,14 @@
               
             </div>
             
-          <br>
           
-          <div class="input-field">
+          <div class="input-field mt-3">
             <input type="submit" class="submit" value="Create New Post" id="firstButton">
           </div>
           </form>
-          
+          <br>
+          <br>
+
       </div>
   </div>  
 
