--- a/views/newfoodpost.ejs
+++ b/views/newfoodpost.ejs
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/cssfiles/newfoodpost.css">
 
   <div class="box2">
-      <div class="container1">
+      <div class="container">
         <form action= "/foodposts" method = "POST" class="validated-form"  enctype="multipart/form-data">              
           <div class="top">
                   <header><strong>New Post</strong></header>
