--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -5,7 +5,7 @@
 
   <link rel="stylesheet" href="/cssfiles/edit.css">
 
-
+  <% if(singleFoodPost.images.length){ %>
   <div class="box2">
     <div class="container">
       <form action="/foodposts/<%= singleFoodPost._id %>?_method=PUT" method = "POST" class="validated-form" enctype="multipart/form-data">
@@ -52,7 +52,7 @@
 
                 </div>  
                 
-                <div class = "col-4 ml-4">
+                <div class = "col-4">
                   <input type="file" name="image" id="file" multiple>
                   <label for="file">
                     Choose a photo <i class='bx bx-paperclip' ></i>
@@ -72,7 +72,16 @@
         
           </div>
           <div class = "col-6">
-            <div id="foodpostCarousel" class="carousel" data-ride="carousel" data-interval="false">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
+              <ol class="carousel-indicators">
+                <% for(let y = 0; y < singleFoodPost.images.length ; y++){ %>
+                    <%if(y==0){ %>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="<%= y %>" class="active"></li>
+                    <%}else{ %>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="<%= y %>"></li>
+                    <%} %>
+                <% }%>
+              </ol>
               <div class="carousel-inner">
                   <% for (var x = 0; x < singleFoodPost.images.length ; x++){ %>
                       <% if(x==0){ %>
@@ -106,11 +115,11 @@
            
               </div>
               <% if(singleFoodPost.images.length > 1) {%>
-              <a class="carousel-control-prev" href="#foodpostCarousel" role="button" data-slide="prev">
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
               </a>
-              <a class="carousel-control-next" href="#foodpostCarousel" role="button" data-slide="next">
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
               </a>
@@ -121,9 +130,79 @@
         
       </form>
       <br>
+      <br>
+      <br>
+    </div>
+  </div> 
+  <% }else{ %>
+    <div class="box1">
+      <div class="container3">
+        <form action="/foodposts/<%= singleFoodPost._id %>?_method=PUT" method = "POST" class="validated-form" enctype="multipart/form-data">
+          <div class="top">
+            <header><strong>Update Post</strong></header>
+          </div>
+
+          <div class="input-field">
+              <input type="text" class="input2" name = "foodpost[name]" placeholder="Name" value = "<%= singleFoodPost.name%>" required>
+              <i class='bx bx-user' ></i>
+          </div>
+
+          <div class="input-field">
+            <input type="text" class="input2" name = "foodpost[price]" placeholder="Price" value = "<%= singleFoodPost.price%>" required>
+            <i class='bx bx-dollar' ></i>
+          </div>
+
+          <div class="input-field">
+            <input type="text" class="input2" name = "foodpost[location]" placeholder="Location" value = "<%= singleFoodPost.location%>" required>
+            <i class='bx bx-pin ' ></i>
+          </div>
+
+          <div class="input-field">
+            <textarea class = "input3" cols="50" rows="10" name = "foodpost[description]"  placeholder="Description" required><%= singleFoodPost.description%></textarea>
+            <i class='bx bx-text' id = "descriptionItag"></i>
+          </div>
+
+          <br>
+          <div class = "container1">
+            <div class = "row">
+              
+              <div class = "col-6 pl-0">
+                <select id="rating" name="foodpost[rating]" class = "mt-3 pt-1 pb-1 pl-1 pr-1" required>
+                  <option selected disabled>Choose A Rating</option>
+                  <option value="0">0</option>
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                </select>
+
+              </div>  
+              
+              <div class = "col-4 ml-4">
+                <input type="file" name="image" id="file" multiple>
+                <label for="file">
+                  Choose a photo <i class='bx bx-paperclip' ></i>
+                </label>
+
+              </div>
+              
+              
+            </div>
+          </div>
+          <br>
+          <div class="input-field">
+            <input type="submit" class="submit" value="Update Post" id="firstButton">
+          </div>
+        </form>
+        <br>
+        <br>
+        <br>
+      </div>
     </div>
 
-</div> 
+  <% } %>
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
@@ -134,8 +213,3 @@
     crossorigin="anonymous"></script>
 </body>
 </html>
-
-
-
-
- 
