--- a/views/searchUser.ejs
+++ b/views/searchUser.ejs
@@ -12,12 +12,22 @@
     
     <form action="/foodposts/search" method = "GET" name = "searchBar">
         <input type="text" name="search" placeholder="food search">
-        <input type="checkbox" id="vehicle1" name="searchUser" value="true">
-        <label for="vehicle1"> I have a bike</label><br>
         <input type="submit" value="submit">
 
     </form>
     
+    <% if(match){ %>
+        <% for(var i = 0;i<result.length;i++){ %>
+            <div class = "post">
+                <a href = "/foodposts/<%= result[i]._id %>"><%= result[i].name %></a>
+                <p>By <%= result[i].writer.username %></p>
+                <p>At <%= result[i].location %></p>
+                <p hidden = true><%= result[i].geometry.coordinates %></p>
+            </div>
+            
+
+        <% }%>
+    <% } %>
 
 
 
