--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,21 @@
 <%- include('./partials/header')%>
 <body class = "d-flex flex-column vh-100">
+    <div id = "preloader"></div>
+    <link rel="stylesheet" href="/cssfiles/preloader.css">
+    
+    <script>
+        
+        var loader = document.getElementById("preloader");
+        window.addEventListener("load",function(){
+            setTimeout(function() {
+                loader.style.display = "none";
+            }, 1000)
+            
+        })
+    </script>
+
+    
+
     <%- include('./partials/flasher')%>
     <%- include('./partials/navbar')%>
     <style>
@@ -62,7 +78,6 @@
         const MapBoxToken = "<%- process.env.MAPBOX_API_TOKEN %>"
     </script>
 
-    <script src="/jsfiles/homeMapbox.js"></script>
     <script src="/jsfiles/homeClusterMap.js"></script>
 
         
