--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,26 +1,37 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script src="/jsfiles/liveSearch.js"></script>
+<%- include('./partials/header')%>
+<body class = "d-flex flex-column vh-100">
+    <div id = "preloader"></div>
+    <link rel="stylesheet" href="/cssfiles/preloader.css">
+    
+    <script>
+        
+        var loader = document.getElementById("preloader");
+        window.addEventListener("load",function(){
+            setTimeout(function() {
+                loader.style.display = "none";
+            }, 1000)
+            
+        })
+    </script>
+
+    <%- include('./partials/flasher')%>
+    <%- include('./partials/navbar')%>
+
 
     <h1>Search</h1>
     
+
     <form action="/foodposts/search" method = "GET" name = "searchBar">
         <input type="text" name="search" placeholder="food search">
-        <input type="checkbox" id="vehicle1" name="searchUser" value="true">
-        <label for="vehicle1"> I have a bike</label><br>
+        <input type="checkbox" id="searchUser" name="searchUser" value="true">
+        <label for="searchUser"> Search by user?</label><br>
         <input type="submit" value="submit">
 
     </form>
     
 
+    <link rel="stylesheet" href="/cssfiles/search.css">
 
 
 
-</body>
-</html>
+<%- include('./partials/footer')%>
